--- a/feature/src/main/res/layout/activity_main.xml
+++ b/feature/src/main/res/layout/activity_main.xml
@@ -4,30 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/layout"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
-                android:id="@+id/passText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Login"
-                android:inputType="textPersonName" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@android:color/background_dark"
+            android:text="LOGOWANIE"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center"/>
 
+        <EditText
+            android:id="@+id/LoginText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_below="@id/name"
+            android:layout_marginTop="20dp"
+            android:hint="Login"
+            android:inputType="textPersonName" />
 
-
-            <EditText
-                android:id="@+id/LoginText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/PassText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/LoginText"
+            android:hint="Hasło"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/LoginButton"
@@ -35,14 +60,37 @@
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:baselineAligned="false"
+            android:layout_centerInParent="true"
             android:gravity="center"
+            android:layout_below="@id/PassText"
             android:text="@string/zaloguj"
             android:textAlignment="center"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/register"
-            app:layout_constraintTop_toBottomOf="@+id/passText" />
+            app:layout_constraintTop_toBottomOf="@+id/PassText" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/forgotPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/LoginButton"
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/background_dark"
+            android:text="Zapomniałeś hasła?"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/forgotPass"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:textColor="@android:color/background_dark"
+            android:text="Chcesz stworzyć konto?"
+            android:gravity="center"/>
+
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
