--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/white"
+        android:background="@drawable/layout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:background="@android:color/white"
+            android:background="@drawable/round"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_below="@id/name"
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:background="@android:color/white"
+            android:background="@drawable/round"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_below="@id/EmailText"
@@ -60,7 +60,7 @@
             android:id="@+id/PassText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/round"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
@@ -72,7 +72,7 @@
             android:id="@+id/RepPassText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/round"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
@@ -88,6 +88,7 @@
             android:layout_marginBottom="20dp"
             android:baselineAligned="false"
             android:layout_centerInParent="true"
+            android:background="@drawable/round_button"
             android:gravity="center"
             android:layout_below="@id/RepPassText"
             android:text="Rejestracja"
