--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -84,13 +84,14 @@
             android:id="@+id/RegisterButton"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="20dp"
-            android:baselineAligned="false"
-            android:layout_centerInParent="true"
-            android:background="@drawable/round_button"
-            android:gravity="center"
             android:layout_below="@id/RepPassText"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/round_button"
+            android:baselineAligned="false"
+            android:gravity="center"
+            android:onClick="tets"
             android:text="Rejestracja"
             android:textAlignment="center"
             android:textStyle="bold"
