--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,9 +63,10 @@
             android:layout_below="@id/PassText"
             android:layout_centerInParent="true"
             android:layout_marginTop="10dp"
+            android:background="@drawable/round_button"
             android:baselineAligned="false"
             android:gravity="center"
-            android:background="@drawable/round_button"
+            android:onClick="login"
             android:text="@string/zaloguj"
             android:textAlignment="center"
             android:textStyle="bold"
