--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -91,7 +91,7 @@
             android:background="@drawable/round_button"
             android:baselineAligned="false"
             android:gravity="center"
-            android:onClick="tets"
+            android:onClick="register"
             android:text="Rejestracja"
             android:textAlignment="center"
             android:textStyle="bold"
