--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -56,6 +56,11 @@
         android:id="@+id/lvExp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+        <ListView
+            android:id="@+id/statList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <Button
