--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -4,5 +4,8 @@
     android:layout_height="match_parent"
     android:id="@+id/adapterView"
     android:textSize="16dip"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp" />
+    android:paddingTop="1dp"
+    android:paddingLeft="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:paddingBottom="1dp" />
