--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -44,11 +44,12 @@
             android:textAlignment="center"
             android:layout_toRightOf="@+id/history"
             android:layout_weight="0.34"
-            android:text="ZNAJOMI"/>
+            android:text="USTAWIENIA"/>
 
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/relLay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/nav">
@@ -61,6 +62,129 @@
             android:id="@+id/statList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/nav"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/nameTextTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Imię"
+            android:textSize="18sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp" />
+
+        <TextView
+            android:id="@+id/nameText"
+            android:textSize="18sp"
+            android:layout_below="@id/nameTextTag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:visibility="visible"
+            android:background="@drawable/round" />
+
+        <EditText
+            android:id="@+id/changeName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/nameTextTag"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/round"
+            android:visibility="invisible"
+            android:hint="Nowe Imię"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/lastnameTextTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/changeName"
+            android:text="Nazwisko"
+            android:textSize="18sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp" />
+
+        <TextView
+            android:id="@+id/lastnameText"
+            android:textSize="18sp"
+            android:layout_below="@id/lastnameTextTag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:visibility="visible"
+            android:background="@drawable/round" />
+
+        <EditText
+            android:id="@+id/changeLastname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lastnameTextTag"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/round"
+            android:visibility="invisible"
+            android:hint="Nowe Nazwisko"
+            android:inputType="textPersonName" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/changeLastname"
+            android:weightSum="1.0">
+
+            <Button
+                android:id="@+id/edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/round_button"
+                android:text="Edit"
+                android:layout_weight="0.5"
+                />
+
+            <Button
+                android:id="@+id/acceptEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/round_button"
+                android:visibility="gone"
+                android:text="Akceptuj"
+                android:layout_weight="0.5"
+                />
+
+            <Button
+                android:id="@+id/logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/round_button"
+                android:text="Wyloguj"
+                android:layout_weight="0.5"/>
+
+        </LinearLayout>
+
     </RelativeLayout>
 
     <Button
